# pyboggle

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
pyboggle/: board.py  words.py
tests/: test_pyboggle.py
